[gd_scene load_steps=11 format=3 uid="uid://b3v7yimakb35"]

[ext_resource type="Texture2D" uid="uid://c0gf6h8hxbp27" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/Setting menu.png" id="1_ke76p"]
[ext_resource type="Script" path="res://scripts/ui/pause.gd" id="1_trgvw"]
[ext_resource type="Texture2D" uid="uid://b7nt2d4hw6e76" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/button_unpressed.png" id="2_5d4p6"]
[ext_resource type="Texture2D" uid="uid://k5lnqhevgt72" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/button_pressed.png" id="3_qw72b"]
[ext_resource type="Texture2D" uid="uid://bl8lljwlmrxy4" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/sponsor_button_unpressed.png" id="4_00sgv"]
[ext_resource type="Texture2D" uid="uid://bj1mv0vud87gp" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/sponsor_button_pressed.png" id="5_oo7nc"]
[ext_resource type="Texture2D" uid="uid://dmqgjjteofoqq" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/about_button_unpressed.png" id="6_bkqcb"]
[ext_resource type="Texture2D" uid="uid://coghfm201q71h" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/about_button_pressed.png" id="7_7yfhj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_piw21"]
texture = ExtResource("1_ke76p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_11ecf"]
sources/0 = SubResource("TileSetAtlasSource_piw21")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trgvw")

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource("TileSet_11ecf")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 524288, 0, 131068, 524288, 1, 196604, 524288, 2, 262140, 524288, 3, 327676, 524288, 4, 393212, 524288, 5, 458748, 524288, 6, 524284, 524288, 7, 589820, 524288, 8, 65533, 589824, 0, 131069, 589824, 1, 196605, 589824, 2, 262141, 589824, 3, 327677, 589824, 4, 393213, 589824, 5, 458749, 589824, 6, 524285, 589824, 7, 589821, 589824, 8, 65534, 655360, 0, 131070, 655360, 1, 196606, 655360, 2, 262142, 655360, 3, 327678, 655360, 4, 393214, 655360, 5, 458750, 655360, 6, 524286, 655360, 7, 589822, 655360, 8, 65535, 720896, 0, 131071, 720896, 1, 196607, 720896, 2, 262143, 720896, 3, 327679, 720896, 4, 393215, 720896, 5, 458751, 720896, 6, 524287, 720896, 7, 589823, 720896, 8, 0, 786432, 0, 65536, 786432, 1, 131072, 786432, 2, 196608, 786432, 3, 262144, 786432, 4, 327680, 786432, 5, 393216, 786432, 6, 458752, 786432, 7, 524288, 786432, 8, 1, 851968, 0, 65537, 851968, 1, 131073, 851968, 2, 196609, 851968, 3, 262145, 851968, 4, 327681, 851968, 5, 393217, 851968, 6, 458753, 851968, 7, 524289, 851968, 8, 2, 917504, 0, 65538, 917504, 1, 131074, 917504, 2, 196610, 917504, 3, 262146, 917504, 4, 327682, 917504, 5, 393218, 917504, 6, 458754, 917504, 7, 524290, 917504, 8, 3, 983040, 0, 65539, 983040, 1, 131075, 983040, 2, 196611, 983040, 3, 262147, 983040, 4, 327683, 983040, 5, 393219, 983040, 6, 458755, 983040, 7, 524291, 983040, 8)

[node name="PausedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 19.0
offset_right = 25.0
offset_bottom = 38.0
scale = Vector2(0.75, 0.75)
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = 69.0
offset_right = 67.0
offset_bottom = 105.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="ResumeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 70.0
offset_right = 25.0
offset_bottom = 89.0
scale = Vector2(0.75, 0.75)
text = "RESUME"
horizontal_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -22.5
offset_top = 89.0
offset_right = 67.5
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -18.75
offset_top = 90.0
offset_right = 31.25
offset_bottom = 109.0
scale = Vector2(0.75, 0.75)
text = "SETTINGS"
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -22.5
offset_top = 109.0
offset_right = 67.5
offset_bottom = 136.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="ExitLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 110.0
offset_right = 25.0
offset_bottom = 129.0
scale = Vector2(0.75, 0.75)
text = "EXIT"
horizontal_alignment = 1

[node name="SponsorButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 18.0
offset_right = 50.0
offset_bottom = 42.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("4_00sgv")
texture_pressed = ExtResource("5_oo7nc")

[node name="AboutButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 18.0
offset_right = 62.0
offset_bottom = 42.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("6_bkqcb")
texture_pressed = ExtResource("7_7yfhj")

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SponsorButton" to="." method="_on_sponsor_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
